samples/_failures_safe/1761658528_d8fdb0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_76257048.c: In function ‘main’:
./samples/SAFE/__tmp_76257048.c:165:5: error: expected declaration or statement at end of input
  165 |     return 0;
      |     ^~~~~~
